# niseko-scraper

./: pyproject.toml
niseko_scraper/: scraper.py  visualize.py
niseko_scraper/checkpoints/: 2024_04_21-21h_52m-stayed_nights_4.pickle  2024_04_21-22h_25m-stayed_nights_4.pickle  2024_04_21-22h_40m-stayed_nights_4.pickle  2024_04_21-22h_52m-stayed_nights_4.pickle  2024_04_21-23h_15m-stayed_nights_4.pickle  2024_04_22-00h_21m-stayed_nights_4.pickle  2024_04_22-10h_21m-stayed_nights_4.pickle
